[package]
name = "important"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default      = ["std"]

std          = ["std-teaclave", "std-serde", "twox-hash"]
sgx_enclave  = ["sgx-teaclave", "sgx-serde", "twox-hash-sgx"]

std-teaclave = ["sgx_ucrypto"]
sgx-teaclave = ["sgx_tcrypto", "sgx_tkey_exchange"]
std-serde    = ["serde", "serde_json"]
sgx-serde    = ["serde-sgx", "serde_json-sgx"]

[dependencies]
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net"] }
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange   = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

serde               = { optional = true, version = "1.0", features = ["derive"] }
serde_json          = { optional = true, version = "1.0" }

serde-sgx           = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx      = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }

twox-hash           = { optional = true, version = "1.6.0" }
twox-hash-sgx       = { optional = true, version = "1.6.0", package = "twox-hash", git = "https://github.com/shepmaster/twox-hash.git", default-features = false }