[package]
name = "sgx_support"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

# specifies the enclave dependencies
[package.metadata.geode]
enclaves = [
    "./sgx_enclave",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default      = ["sgx_enclave"]

sgx_enclave  = ["sgx-teaclave", "sgx-serde"]

sgx-teaclave = ["sgx_tcrypto", "sgx_tkey_exchange"]
sgx-serde    = ["serde-sgx", "serde_json-sgx", "serde-big-array-sgx"]

[dependencies]
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange   = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde-sgx           = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx      = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde-big-array-sgx = { optional = true, package = "serde-big-array", git = "https://github.com/mesalock-linux/serde-big-array-sgx" }

[build-dependencies]
geode-builder = { path = "../../builder" }