[package]
name = "sgx_std_support"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default      = ["std"]

std          = ["std-teaclave", "std-serde"]
sgx_enclave  = ["sgx-teaclave", "sgx-serde"]

std-teaclave = ["sgx_ucrypto"]
sgx-teaclave = ["sgx_tcrypto", "sgx_tkey_exchange"]
std-serde    = ["serde", "serde_json", "serde-big-array"]
sgx-serde    = ["serde-sgx", "serde_json-sgx", "serde-big-array-sgx"]

[dependencies]
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs", "net", "thread"] }
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_ucrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange   = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

serde               = { optional = true, version = "1.0", features = ["derive"] }
serde_json          = { optional = true, version = "1.0" }
serde-big-array     = { optional = true, version = "0.3.0" }

serde-sgx           = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx      = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
serde-big-array-sgx = { optional = true, package = "serde-big-array", git = "https://github.com/mesalock-linux/serde-big-array-sgx" }

twox-hash           = { version = "1.6.0" }