[package]
name = "serde-demo"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

# specifies the enclave dependencies
[package.metadata.geode]
enclaves = [
    "./demo_enclave",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_types     = { git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git", rev = "v1.1.4-upgrade" }
sgx_urts      = { git = "https://github.com/yunuseozer/incubator-teaclave-sgx-sdk.git", rev = "v1.1.4-upgrade" }

[build-dependencies]
geode-builder = { path = "../../builder" }
