[package]
name = "mysecretapp_enclave"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

[package.metadata.enclave]
config = "mysecretapp_enclave.config.xml"
edl = "mysecretapp_enclave.edl"
linker-script = "mysecretapp_enclave.lds"

[lib]
name = "mysecretapp_enclave"
crate-type = [
    "staticlib",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default      = ["sgx_enclave"]

sgx_enclave  = ["sgx-teaclave", "sgx-serde"]

sgx-teaclave = ["sgx_tcrypto", "sgx_tkey_exchange"]
sgx-serde    = ["serde-sgx", "serde_json-sgx"]

[dependencies]
sgx_tstd            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs"] }
sgx_types           = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper   = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
sgx_trts            = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange   = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto         = { optional = true, rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
serde-sgx           = { optional = true, package = "serde", git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
serde_json-sgx      = { optional = true, package = "serde_json", git = "https://github.com/mesalock-linux/serde-json-sgx" }
lazy_static         = { version = "1.4.0", default-features = false, features = ["spin_no_std"] }
twox-hash           = { version = "1.6.0", default-features = false }

important           = { path = "../../important", default-features = false, features = ["sgx_enclave"] }

[build-dependencies]
geode-builder = { path = "../../../builder"}