[package]
name = "demo_enclave"
version = "0.1.0"
authors = ["Automata Team"]
edition = "2018"

[package.metadata.enclave]
config = "demo_enclave.config.xml"
edl = "demo_enclave.edl"
linker-script = "demo_enclave.lds"

[lib]
name = "demo_enclave"
crate-type = [
    "staticlib",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sgx_tstd          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["untrusted_fs"] }
sgx_types         = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_crypto_helper = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", package = "sgx_tcrypto_helper" }
sgx_rand          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_trts          = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tkey_exchange = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[build-dependencies]
geode-builder = { path = "../../builder"}
